# ltsa

./: .gitignore  Cargo.toml  README.md  viz.html
.github/workflows/: generate_viz.yml  rust.yml
jsonrpc/: Cargo.toml
jsonrpc/src/: client.rs  types.rs
jsonrpc/tests/: test_client.rs  test_types.rs
lsp-client/: Cargo.toml
lsp-client/src/: client.rs
lsp-client/src/clients/: mod.rs  stdio.rs
lsp-client/tests/: test_servers.rs
lsp-client/tests/python-language-server/: main.rs
lsp-client/tests/python-language-server/snapshots/: python_language_server__python_language_server.snap
lsp-client/tests/rust_analyzer/: main.rs
lsp-client/tests/rust_analyzer/snapshots/: rust_analyzer__rust_analyzer.snap
lsp-client/tests/snapshots/: test_servers__python_language_server.snap  test_servers__rust_analyzer.snap  test_servers__solidity_ls.snap  test_servers__solidity_solc_lsp.snap
lsp-client/tests/solidity-ls/: main.rs
lsp-client/tests/solidity-ls/snapshots/: solidity_ls__rust_analyzer.snap
tools/pub2fn/: Cargo.toml
tools/pub2fn/src/: lib.rs  main.rs
tools/pub2fn/src/language_provider/: solidity.rs
tools/pub2fn/tests/: .main.rs.pending-snap  integration_tests.rs  main.rs
tools/pub2fn/tests/solidity/: contract.sol  main.rs  mod.rs
tools/scanexr/: Cargo.toml  README.md
tools/scanexr/src/: converter.rs  language_provider.rs  lib.rs  main.rs  old.rs  path_finder.rs  step.rs  test_utils.rs  tree_sitter_facade.rs  utils.rs
tools/scanexr/src/tracers/: solidity.rs
tools/scanexr/tests/: test_solidity_ls.rs
tools/viz/: Cargo.toml
tools/viz/src/: main.rs
(+52 files in other folders)
