[package]
name = "jsonrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.26.0", features = ["sync", "rt", "macros"] }

[dev-dependencies]
insta = { version = "1.28.0", features = ["json"] }
