[package]
name = "lsp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
jsonrpc = { path = "../jsonrpc" }
lsp-types = "0.94.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "sync",
    "time",
] }

[dev-dependencies]
insta = { version = "1.28.0", features = ["json"] }
